# tamp

./: .bumpversion.cfg  .clang-format  .clangd  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc.json  .readthedocs.yaml  CLAUDE.md  CMakeLists.txt  Kconfig  MANIFEST.in  MICROPYTHON_TESTING.rst  Makefile  README.md  README.rst  build.py  package-compressor.json  package-decompressor.json  package.json  pyproject.toml  setup.py
.github/: FUNDING.yml  contributing.md  dependabot.yml
.github/workflows/: build_wheels.yaml  deploy.yaml  esp_upload_component.yml  espidf_build.yaml  javascript.yaml  mpy_native_module.yaml  tests.yaml  update_version.yaml
ctests/: fatfs_ramdisk.c  fatfs_ramdisk.h  history_round_trip.c  lfs_rambd.c  lfs_rambd.h  test_compressor.c  test_decompressor.c  test_runner.c  test_stream.c  test_stream_filesystems.c
ctests/fatfs/source/: ffconf.h
datasets/extended-compressed/: RPI_PICO-20250415-v1.25.0.uf2.tamp  dickens.tamp  enwik8.tamp  mozilla.tamp  mr.tamp  nci.tamp  ooffice.tamp  osdb.tamp  reymont.tamp  samba.tamp  sao.tamp  webster.tamp  x-ray.tamp  xml.tamp
datasets/v1-compressed/: RPI_PICO-20250415-v1.25.0.uf2.tamp  enwik8.tamp
datasets/v1-compressed/silesia/: dickens.tamp  mozilla.tamp  mr.tamp  nci.tamp  ooffice.tamp  osdb.tamp  reymont.tamp  samba.tamp  sao.tamp  webster.tamp  x-ray.tamp  xml.tamp
datasets/v2-compressed/: dickens.tamp  nci.tamp  ooffice.tamp  xml.tamp
devices/: BENCHMARKS.md
devices/common/: profiling.h  tamp_bench.c  tamp_bench.h
devices/espidf/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.noopt  targets.mk
devices/espidf/main/: CMakeLists.txt  idf_component.yml  main.c
devices/rp2040/: .gitignore  CMakeLists.txt  README.md  main.c  profiling.h  targets.mk
devices/stm32h7b0/: Makefile  README.md  linker.ld  main.c  run.tcl  startup.c  syscalls.c  system.c  targets.mk
docs/: Makefile
docs/source/: Installation.rst  api.rst  c_library.rst  conf.py  custom_dictionary.rst  index.rst  javascript.rst  migrating_to_v2.rst  python_api.rst  research.rst  rle.rst  rust.rst  specification.rst
espidf/: CMakeLists.txt  Makefile  README.md  compressor_esp32.cpp
espidf/private/: copyutil.hpp  tamp_arch.hpp  tamp_search.hpp
espidf/tamp/: CMakeLists.txt  Makefile  compressor_esp32.cpp  idf_component.yml
espidf/tamp/private/: tamp_copy.h  tamp_search.hpp
espidf/test/: CMakeLists.txt  README.md  conftest.py  pytest.ini  requirements.txt  sdkconfig.defaults  test_tamp_qemu.py
espidf/test/main/: CMakeLists.txt  test_compression_equivalence.c  test_esp32_compressor.c  test_esp32_decompressor.c  test_main.c  test_real_compression.c  test_search_consistency.c
fuzz/: decompressor_fuzz_case.h  fuzz-matrix.sh  fuzz_decompressor.c  fuzz_round_trip.c
fuzz/esp32_host/: differential.cpp  esp_log.h
mpy_bindings/: bindings.c  bindings_common.py  bindings_compressor.py  bindings_decompressor.py
tamp/: __init__.py  __init__.pyi  __main__.py  _c_build_dictionary.pyx  _c_common.pxd  _c_common.pyx  _c_compressor.pyx  _c_decompressor.pyx  compressor.py  compressor_viper.py  ctamp.pxd  decompressor.py  decompressor_viper.py  tamp.pyx
tamp/_c_src/: common.c  common.h  compress.c  compressor.c  compressor.h  ctamp.pxd  mpy_bindings.c  mpy_bindings.py  mpy_bindings_common.py  mpy_bindings_compressor.py  mpy_bindings_decompressor.py  tamp.pyx
tamp/_c_src/mpy_bindings/: bindings.c
tamp/_c_src/tamp/: common.c  common.h  common_window_copy_compact.c  common_window_copy_fast.c  compressor.c  compressor.h  compressor_32bit.cpp  compressor_esp32.cpp  compressor_esp32.hpp  compressor_find_match_desktop.c  compressor_find_match_embedded.c  compressor_find_match_prefilter.c  compressor_find_match_swar32.c  decompressor.c  decompressor.h  decompressor_refill_compact.c  decompressor_refill_fast.c
tamp/c/: common.c  common.h  compress.c  compress.h  tamp_conf.h
tamp/cli/: build_dictionary.py  main.py
tests/: conftest.py  test_bit_writer_reader.py  test_bug_regressions.py  test_build_dictionary.py  test_cli.py  test_compressor.py  test_compressor_c.py  test_compressor_decompressor.py  test_compressor_helpers.py  test_dataset_regression.py  test_decompressor.py  test_file_interface.py  test_pseudorandom.py
tools/: analysis.py  benchmark-code-size.sh  benchmark_stream.c  collect-data.py  collect-events.py  compressor_research.py  compute_min_output_flush_size.py  device-runner.py  find_seed.py  huffman-zipf.py  huffman.py  huffman_jump_table.py  micropython-compression-benchmark.py  on-device-compression-benchmark.py  on-device-decompression-benchmark.py  on-device-deflate-compression-benchmark.py  on-device-deflate-decompression-benchmark.py  optimize-extended-huffman.py  pack-device-blob.py  pack-device-vectors.py  performance-benchmark.sh  print_compressed_sizes.py  profiler.py  research.py  zlib_compress.py  zlib_decompress.py
tools/c-profiler/: Makefile  main.c
tools/pi_pico/: .gitignore  CMakeLists.txt  Makefile  README.md
tools/pi_pico/benchmark/: CMakeLists.txt  Makefile  README.md  main.c
tools/pi_pico/library-size/: .gitignore  CMakeLists.txt  README.md
tools/qemu-profiler/: README.md  profile.py
tools/qemu-profiler/firmware/: bench_data_classic.h  link-an505.ld  link.ld  main.c  replay_main.c  semihost.c  startup.c
wasm/: Makefile  README.md  benchmark.js  compress-enwik8-oneshot.js  compress-enwik8.js  decompress-enwik8-oneshot.js  eslint.config.js  package-lock.json  package.json  tsup.config.js
wasm/examples/: basic.js
wasm/scripts/: build.js
wasm/src/: index.d.ts  index.js  sizeof.c  streams.d.ts  streams.js  tamp.d.ts  tamp.js
wasm/test/: basic-test.js  callback-test.js  chunked-compression-test.js  comprehensive-test.js  extended-test.js  integration-test.js  simple-compression-test.js  streaming-test.js  streams-test.js
website/: README.md  babel.config.js  index.html  package-lock.json  package.json  postcss.config.js  webpack.config.js
website/css/: styles.css
website/js/: main.js
(+5 files in other folders)
